# ocr-invoices

./: .gitignore  README.md  pyproject.toml
ocr_invoices/api/: extract_invoice.py  main.py
ocr_invoices/api/utils/: parsers.py
ocr_invoices/notebooks/: ocr_test_results-aug-v4-0.5v2.csv  ocr_test_results-aug-v4-text-0.5.csv  visualize.ipynb
ocr_invoices/services/: boundsRecognition.py  tableExtraction.py
ocr_invoices/src/models/: train_model.py
ocr_invoices/src/visualization/: visualize_model.py
ocr_invoices/test/: test.json  test_bench.py
ocr_invoices/test/utils/: levenshtein_distance.py  match_percentage.py  preprocess_string.py
