[tool.poetry]
name = "ocr-invoices"
version = "0.1.0"
description = ""
authors = ["rutuser <micharuzicka.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
opencv-python = "^4.9.0.80"
rich = "^13.7.1"
pytesseract = "^0.3.10"
img2table = "^1.2.11"
requests = "^2.31.0"
transformers = "^4.38.2"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[tool.poetry.scripts]
api = 'ocr_invoices.api.main:start'
test = 'ocr_invoices.test.test_bench:test'
visualize = 'ocr_invoices.src.visualization:visualize'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
